--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="description" content="Fusion restaurant based on Donngdaemun. "/>
+    <meta name="og:title" content="Little Lemon restaurant"/>
+    <meta name="og:image" content="./restaurant chef B.jpg"/>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
